19-efs-csi-driver/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: efs-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest

          ports:
            - name: http
              containerPort: 80

          volumeMounts:
            - name: efs-storage
              mountPath: /data

      volumes:
        - name: efs-storage
          persistentVolumeClaim:
            claimName: efs-pvc
