19-efs-csi-driver/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: efs-demo

spec:
  ingressClassName: nginx

  rules:
    - host: efs.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx
                port:
                  number: 80
